added max distance and max elevation gain inputs to search.js

--- a/fair_weather_hiking/client/src/App.css
+++ b/fair_weather_hiking/client/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+
+.search-form {
+  width: 60%;
+}
+
 /* 
 .container {
   background-image: url("./trees.jpeg");
