fixed buttons on index cards and created event handler for firing methods

--- a/fair_weather_hiking/client/src/components/results/hike_card/style.css
+++ b/fair_weather_hiking/client/src/components/results/hike_card/style.css
@@ -2,22 +2,6 @@
 {
     padding: 12px;
 }
-.weather-icon-div
-{
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-}
-.weather-icon
-{
-    height: 20%;
-    margin: 0;
-    padding: 0;
-}
-.bg
-{
-    background-color: rgba(0, 0, 0, 0.6);
-}
 .info-text
 {
     font-size: 15px;
@@ -26,4 +10,18 @@
 {
     display: inline-block;
     width: 33%;
+}
+.btn-by2
+{
+    display: inline-block;
+    box-sizing: border-box;
+    width: 50%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+
+}
+
+.no-padding
+{
+    padding: 0;
 }
