--- a/client/public/assets/css/style.css
+++ b/client/public/assets/css/style.css
@@ -1,9 +1,15 @@
 .background
 {
     background-image: url("../images/backgrounds/textureBackground.png");
+    min-height: 100vh;
 }
 .form-background
 {
     background-color: whitesmoke;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 25px 10px;
+}
+.row
+{
+    margin-bottom: 0px;
 }
