--- a/client/src/components/completed/modal.css
+++ b/client/src/components/completed/modal.css
@@ -1,3 +1,4 @@
+
 .modal {
     position: fixed;
     left: 0;
@@ -5,6 +6,7 @@
     width: 100%;
     height: 100%;
     z-index: 990;
+    background: transparent;
   }
   
   .modal .overlay {
@@ -14,23 +16,48 @@
     width: 100%;
     height: 100%;
     z-index: 995;
-    background: rgba(0,0,0,0.85);
+    
+  }
+  .overlay {
+      background-image: url("https://i.pinimg.com/originals/40/fc/65/40fc65faa2798e1294a93f17d9a7ba39.jpg");
+      background-size: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
   }
   
   .modal .modal_content {
     z-index: 999;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 73%;
     transform: translate(-50%, -50%);
     max-height: 90%;
-    overflow: auto;
-    background: #fff;
+    overflow: visible;
+    background: transparent;
     box-sizing: border-box;
     padding: 20px;
     box-shadow: 0 1px 5px rgba(0,0,0,0.7);
     border-radius: 4px;
-    width: 520px; /* This just a default width */
+    width: 35%; /* This just a default width */
+    height: 40%;
+    
+  }
+  .title {
+    z-index: 999;
+    position: absolute;
+    font-size: 2em;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    top: 50%;
+    left: 31%;
+    transform: translate(-50%, -50%);
+    max-height: 90%;
+    overflow: auto;
+    background: transparent;
+    padding: 20px;
+    /* box-shadow: 0 1px 5px rgba(0,0,0,0.7); */
+    width: 40%; /* This just a default width */
+    height: 40%;
+    
   }
   
   .modal .modal_content > h2 {
@@ -56,6 +83,3 @@
     transition: opacity 0.2s ease;
   }
   
-  .modal .close_modal:hover {
-    opacity: 0.9;
-  }
