--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,34 @@
   margin-top: 200px; 
 }
 
+.sort-buttons {
+  padding-left: 20px;
+  display: inline;
+}
+/* 
+.search-title {
+  font-weight: bold;
+  text-align: left;
+  padding-left: 10px;
+} */
+
+/* .or {
+  display: grid;
+  grid-template-columns: minmax(20px, 1fr) auto minmax(20px, 1fr);
+  align-items: center;
+  text-align: center;
+  grid-gap: 20px;
+  width: 100%;
+  padding-top: 40px;
+  color: rgb(12, 12, 82);
+}
+
+.or:before,
+.or:after {
+  content: '';
+  border-top: 2px solid;
+} */
+
 .alert {
   margin-top: 10px;
   border-radius: 5px;
