--- a/client/src/components/completed/modal.css
+++ b/client/src/components/completed/modal.css
@@ -2,11 +2,12 @@
 .modal {
     position: fixed;
     left: 0;
-    top: 0;
+    top: 10%;
     width: 100%;
     height: 100%;
     z-index: 990;
     background: transparent;
+    background-color: black;
   }
   
   .modal .overlay {
@@ -70,16 +71,5 @@
   .modal .modal_content .buttons_wrapper {
     padding: 20px;
   }
-  
-  .modal .close_modal {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    cursor: pointer;
-    font-size: 18px;
-    opacity: 0.5;
-    background: none;
-    border: none;
-    transition: opacity 0.2s ease;
-  }
+
   
