--- a/client/src/components/results/hike_card/style.css
+++ b/client/src/components/results/hike_card/style.css
@@ -24,6 +24,14 @@
 
 }
 
+#More-Info,
+#Less-Info {
+    border: none;
+    padding-bottom: 10px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
 .no-padding
 {
     padding: 0;
