--- a/client/src/components/completed/modal.css
+++ b/client/src/components/completed/modal.css
@@ -3,11 +3,10 @@
     position: fixed;
     left: 0;
     top: 10%;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 90%;
     z-index: 990;
     background: transparent;
-    background-color: black;
   }
   
   .modal .overlay {
@@ -20,26 +19,26 @@
     
   }
   .overlay {
-      background-image: url("https://i.pinimg.com/originals/40/fc/65/40fc65faa2798e1294a93f17d9a7ba39.jpg");
       background-size: 100%;
       background-position: center;
       background-repeat: no-repeat;
+      background-color: lightgrey;
   }
   
   .modal .modal_content {
     z-index: 999;
     position: absolute;
     top: 50%;
-    left: 73%;
+    left: 50%;
     transform: translate(-50%, -50%);
     max-height: 90%;
     overflow: visible;
-    background: transparent;
+    background-color: whitesmoke;
     box-sizing: border-box;
     padding: 20px;
     box-shadow: 0 1px 5px rgba(0,0,0,0.7);
     border-radius: 4px;
-    width: 35%; /* This just a default width */
+    width: 70%; /* This just a default width */
     height: 40%;
     
   }
@@ -57,19 +56,31 @@
     padding: 20px;
     /* box-shadow: 0 1px 5px rgba(0,0,0,0.7); */
     width: 40%; /* This just a default width */
-    height: 40%;
+    height: 50%;
     
   }
   
   .modal .modal_content > h2 {
-    font-size: 28px;
     font-weight: 200;
     margin: 20px 0 40px;
     text-align: center;
   }
   
   .modal .modal_content .buttons_wrapper {
-    padding: 20px;
+    padding: 10px;
   }
 
+  .inputBox {
+    font-size: 2em;
+    line-height: 1em;
+  }
+  
+#submit-complete {
+  margin-top: 4%;
+  margin-right: 2%;
+}
+#cancel-submit {
+  margin-top: 4%;
+  margin-left: 2%;
+}
   
