--- a/client/public/assets/css/style.css
+++ b/client/public/assets/css/style.css
@@ -14,6 +14,7 @@
     background-color: whitesmoke;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.27);
     padding: 25px 10px;
+    margin: 20px 0;
 }
 .row
 {
@@ -27,6 +28,6 @@
 }
 .index-card-bg
 {
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0),rgb(204, 204, 204) ,  rgb(204, 204, 204) , rgb(204, 204, 204) ,rgb(204, 204, 204) ,rgba(255, 255, 255, 0));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(59, 59, 59), rgb(59, 59, 59)  ,rgba(0, 0, 0, 0));
     z-index: 999;
 }
