--- a/client/src/components/hike/weatherCard/style.css
+++ b/client/src/components/hike/weatherCard/style.css
@@ -1,5 +1,6 @@
 .card-date{
     font-size: 1.0rem;
+    font-weight: bold;
     line-height: 110%;
     margin: .7666666667rem 0 .46rem 0;
 }
@@ -12,3 +13,9 @@
     margin: 20px;
     padding: 7px 7px 15px 7px;
 }
+
+/* @media only screen and (max-width: 768px) {
+    .card {
+        background-color: rgba(0, 0, 0, 0.664)
+    }
+} */
