--- a/client/src/components/completed/style.css
+++ b/client/src/components/completed/style.css
@@ -25,3 +25,14 @@
 {
     padding: 0;
 }
+
+.completed {
+    width: 40%;
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 768px) {
+    .completed {
+        width: 90%
+    }
+}
