--- a/client/src/components/pages/styles.css
+++ b/client/src/components/pages/styles.css
@@ -1,3 +1,16 @@
+/* .search {
+    width: 50%;
+    margin: 0 auto
+} */
+
+.search {
+    margin: 0 auto;
+}
+
+form {
+    margin: 10px;
+}
+
 .stats{
     background-color: rgba(59, 59, 59, 0.548);
     padding: 10px 10px 100px 10px;
@@ -15,10 +28,22 @@
 .chart {
     margin: 0 auto;
     height: 250px;
-    width: 90%;
 }
 .col-pad
 {
     padding-top: 0;
     padding-bottom: 0;
+}
+
+@media only screen and (min-width: 768px) {
+    .search {
+        width: 40%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .search,
+    .stats {
+        width: 90%
+    }
 }
